# persona-selector-chatbot

./: .gitignore  README.md
Backend/: pyproject.toml
Backend/app/: main.py  run.py
Backend/app/core/: config.py
Backend/app/schemas/: models.py
Backend/app/services/: ai_handler.py  content_moderation.py  conversation_store.py  file_parser.py
Backend/app/utils/: utils.py
Frontend/: package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.tsx
Frontend/src/components/: Button.tsx  Card.tsx  Footer.tsx  Header.tsx  Icons.tsx
Frontend/src/context/: PersonalityContext.tsx
Frontend/src/data/: personalities.ts
Frontend/src/pages/: ChatPage.tsx  LandingPage.tsx  PersonalitySelectionPage.tsx
Frontend/src/services/: api.ts
